spring-boot-thymeleaf-view-example/k8s/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-thymeleaf-view-example
  labels:
    app: spring-boot-thymeleaf-view-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-thymeleaf-view-example
  template:
    metadata:
      labels:
        app: spring-boot-thymeleaf-view-example
    spec:
      containers:
      - name: spring-boot-thymeleaf-view-example
        image: praveendshankar0502/java:1
        ports:
        - containerPort: 8081
