spring-boot-thymeleaf-view-example/k8s/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-thymeleaf-view-example
  labels:
    app: spring-boot-thymeleaf-view-example
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: spring-boot-thymeleaf-view-example
  type: NodePort
